--- a/CobroCoactivo/web/paginas/gestionUsuarios/consultarUsuarios.xhtml
+++ b/CobroCoactivo/web/paginas/gestionUsuarios/consultarUsuarios.xhtml
@@ -58,7 +58,7 @@
                                                                     <h:inputText class="form-control text-uppercase" maxlength="20" a:placeholder="Ingrese nombre del usuario" id="txtNombreUsuario" value="#{gestionUsuariosBean.nombreUsuario}" requiredMessage="Digite el nombre del usuario"></h:inputText>
                                                                     <span class="input-group-btn">
                                                                         <h:commandLink class="btn btn-danger" value="Buscar">
-                                                                            <f:ajax event="click" listener="#{gestionUsuariosBean.consultarUsuarios(1)}" execute="frmConsultas:txtNombreUsuario" render="frmConsultas:tblUsuario"/>
+                                                                            <f:ajax event="click" listener="#{gestionUsuariosBean.consultarUsuarios(1)}" execute="frmConsultas:txtNombreUsuario" render="frmConsultas:tblUsuario" onevent="test"/>
                                                                         </h:commandLink>
                                                                     </span>
                                                                 </div>
@@ -72,7 +72,7 @@
                                     </div>
                                 </div>
                                 <h:panelGroup id="tblUsuario">
-                                    <table class="table table-hover">
+                                    <table class="table table-hover" id="table">
                                         <div class="row">
                                             <thead>
                                                 <tr>
