--- a/CobroCoactivo/web/plantillas/PlantillaGeneral.xhtml
+++ b/CobroCoactivo/web/plantillas/PlantillaGeneral.xhtml
@@ -103,7 +103,7 @@
 
     </h:head>
 
-    <h:body class="hold-transition skin-red sidebar-mini" onload="bloquear();test()">
+    <h:body class="hold-transition skin-red sidebar-mini" onload="test();table()">
         <p:ajaxStatus  onstart="PF('statusDialog').show()"   onsuccess="PF('statusDialog').hide()"/> 
         <p:dialog position="center,center" showHeader="false"  widgetVar="statusDialog" modal="true" closable="false"  draggable="false" resizable="false">
             <p:graphicImage url="/recursos/images/loading.gif" style="width: 25px;"/><p>Espere...</p>
@@ -1093,8 +1093,8 @@
         <!-- AdminLTE for demo purposes -->
         <script src="#{request.contextPath}/recursos/dist/js/demo.js"></script>
         <!--custom js-->
-        <script src="#{request.contextPath}/recursos/cnv/js/paste.js" type="text/javascript"></script>
-        <script src="#{request.contextPath}/recursos/cnv/js/unload.js" type="text/javascript"></script>
+
+        <script src="#{request.contextPath}/recursos/cnv/js/table.js" type="text/javascript"></script>
         <script src="#{request.contextPath}/recursos/cnv/js/jScript.js" type="text/javascript"></script>
         <!-- date-range-picker -->
         <script src="#{request.contextPath}/recursos/bower_components/moment/min/moment.min.js"></script>
@@ -1105,6 +1105,37 @@
         <script src="#{request.contextPath}/recursos/bower_components/bootstrap-colorpicker/dist/js/bootstrap-colorpicker.min.js"></script>
         <script>
             function test() {
+                $('#table').DataTable({
+                    'destroy': true,
+                    'paging': true,
+                    'lengthChange': true,
+                    'searching': true,
+                    'ordering': true,
+                    'info': true,
+                    'autoWidth': true,
+                    'bPaginate': true,
+                    'language': {
+                        "sProcessing": "Procesando...",
+                        "sLengthMenu": "Mostrar _MENU_ registros",
+                        "sZeroRecords": "No se encontraron resultados",
+                        "sEmptyTable": "Ningún dato disponible en esta tabla",
+                        "sInfo": "Mostrando registros del _START_ al _END_ de un total de _TOTAL_ registros",
+                        "sInfoEmpty": "Mostrando registros del 0 al 0 de un total de 0 registros",
+                        "sInfoFiltered": "(filtrado de un total de _MAX_ registros)",
+                        "sInfoPostFix": "",
+                        "sSearch": "Buscar:",
+                        "sUrl": "",
+                        "sInfoThousands": ",",
+                        "sLoadingRecords": "Cargando...",
+                        "oPaginate": {
+                            "sFirst": "Primero",
+                            "sLast": "Último",
+                            "sNext": "Siguiente",
+                            "sPrevious": "Anterior"
+                        },
+
+                    }
+                })
                 $('#dataTableDetalle').DataTable({
                     'destroy': true,
                     'paging': true,
@@ -1137,37 +1168,6 @@
                     }
                 })
                 $('#dataTable').DataTable({
-                    'destroy': true,
-                    'paging': true,
-                    'lengthChange': true,
-                    'searching': true,
-                    'ordering': true,
-                    'info': true,
-                    'autoWidth': true,
-                    'bPaginate': true,
-                    'language': {
-                        "sProcessing": "Procesando...",
-                        "sLengthMenu": "Mostrar _MENU_ registros",
-                        "sZeroRecords": "No se encontraron resultados",
-                        "sEmptyTable": "Ningún dato disponible en esta tabla",
-                        "sInfo": "Mostrando registros del _START_ al _END_ de un total de _TOTAL_ registros",
-                        "sInfoEmpty": "Mostrando registros del 0 al 0 de un total de 0 registros",
-                        "sInfoFiltered": "(filtrado de un total de _MAX_ registros)",
-                        "sInfoPostFix": "",
-                        "sSearch": "Buscar:",
-                        "sUrl": "",
-                        "sInfoThousands": ",",
-                        "sLoadingRecords": "Cargando...",
-                        "oPaginate": {
-                            "sFirst": "Primero",
-                            "sLast": "Último",
-                            "sNext": "Siguiente",
-                            "sPrevious": "Anterior"
-                        },
-
-                    }
-                })
-                $('#table').DataTable({
                     'destroy': true,
                     'paging': true,
                     'lengthChange': true,
